--- a/index.html
+++ b/index.html
@@ -80,6 +80,9 @@
                             <li>Created various Python scripts to automate weekly reporting and data entry.</li>
                             <li>Validated data migration from legacy system to SAP for all customer, supplier and transactional data using python scripts.</li>
                             <li>Work with stakeholders to develop user acceptance testing (UAT) for new projects and ensured all user requirements are met.</li>
+                            <li>Gather required documentation to create user test cases for SAP implementation.</li>
+                            <li>Set up and maintain automatic accounting rules in eOne JD Edwards for new projects and troubleshoot issues.</li>
+                            <li>Work alongside GL, AR and AP teams to troubleshoot SAP system errors and create Ad-hoc reporting.</li>
                         </ul>
                     </div>
                 </div>
